# fusion-hawking

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  arun_multicast_verification_linux.py  arun_multicast_verification_windows.py  fusion.bat  fusion.sh  generate_coverage.ps1  pyproject.toml  requirements.txt  run_demos.ps1  run_tests.ps1  run_tests.sh  rustfmt.toml  test_multicast_ip.py  test_multicast_loopback.py  test_multicast_loopback_interproc.py  verify_bindings.py  verify_demos.ps1  verify_vnet_connectivity.py  verify_windows_binding.py
.agent/rules/: coding.md  id_management.md  network_binding.md
.agent/skills/config_validator/: SKILL.md
.agent/skills/id_manager/: SKILL.md
.agent/workflows/: CONFIGURATION_RULES.md  ID_MANAGEMENT_RULES.md  add_new_service.md  coding_rules.md  validate_configuration.md
.github/workflows/: fusion.yml
cmake/: FusionCodegen.cmake
docs/: IDL.md  ID_MANAGEMENT_RULES.md  SOMEIPY_PR_GUIDE.md  SOMEIP_SPEC_COMPLIANCE.md  architecture.md  design_and_requirements.md  requirements.html  test_matrix.md  user_guide.md
docs/diagrams/: .diagram_hashes.json  automotive_pubsub_architecture.puml  automotive_pubsub_sequence.puml  automotive_pubsub_types.puml  cicd_pipeline.puml  codegen_pipeline.puml  concurrency_model.puml  config_architecture.puml  config_usecase_complex_req.puml  config_usecase_multi_homed.puml  config_usecase_multi_inst_diff_iface.puml  config_usecase_multi_inst_same_iface.puml  config_usecase_shared_dedicated.puml  config_usecase_static.puml  cross_language_runtimes.puml  deployment_topology.puml  integrated_apps_architecture.puml  integrated_apps_interaction.puml  integrated_apps_workflow.puml  layered_architecture.puml  request_response_flow.puml  sd_demo_sequence.puml  sd_state_machine.puml  simple_no_sd_sequence.puml  someip_header_format.puml  someipy_demo_integration.puml  someipy_demo_sequence.puml  subscription_flow.puml  system_overview.puml  versioning_demo_sequence.puml  versioning_demo_workflow.puml
examples/: README.md  config.json  idl_demo.py  interface.py  map_service.py  sd_demo.rs
examples/automotive_pubsub/: README.md  config.json  interface.py
examples/automotive_pubsub/cpp_radar/: CMakeLists.txt  main.cpp
examples/automotive_pubsub/idl/: __init__.py  fusion_service.py  radar_service.py  types.py
examples/automotive_pubsub/js_adas/: package-lock.json  package.json  tsconfig.json
examples/automotive_pubsub/python_adas/: __init__.py  main.py
examples/automotive_pubsub/rust_fusion/: Cargo.toml  build.rs  main.rs
examples/cpp_app/: config.hpp  logger.hpp  main.cpp
examples/integrated_apps/: README.md  config.json  interface.py
examples/integrated_apps/cpp_app/: CMakeLists.txt  config.json  main.cpp
examples/integrated_apps/idl/: __init__.py  complex_type_service.py  diagnostic_service.py  math_service.py  sensor_service.py  sort_service.py  string_service.py  types.py
examples/integrated_apps/js_app/: package-lock.json  package.json  tmp_js_client.js
examples/integrated_apps/python_app/: main.py
examples/integrated_apps/rust_app/: Cargo.toml  build.rs  config.json  main.rs
examples/large_payload_test/: client.cpp  client.py  run_tp_test.py  server.py
examples/large_payload_test/js/: client.js  package.json
examples/large_payload_test/rust/: client.rs  server.rs
examples/python_app/: main.py
examples/rust_app/: main.rs
examples/sd_demos/: sd_demo.rs
examples/simple_no_sd/cpp/: client.cpp  server.cpp
examples/simple_no_sd/js/: client.js  server.js
examples/simple_no_sd/python/: client.py  server.py
examples/simple_no_sd/rust/: client.rs  server.rs
examples/someipy_demo/: README.md  client_config.json  client_fusion.cpp  client_fusion.py  client_fusion.rs  common_ids.py  debug_interop.py  service_someipy.py  someipy_patch.py  someipyd_config.json  start_daemon.py
examples/someipy_demo/js_client/: package-lock.json  package.json  tsconfig.json
examples/versioning_demo/: README.md  config.json  interface.py  run.py
src/: lib.rs  logging.rs
src/codec/: complex.rs  header.rs  mod.rs  primitives.rs  session.rs  tests.rs  tp.rs  traits.rs
src/cpp/src/: runtime.cpp  tp.cpp
src/js/: package-lock.json  package.json  tsconfig.json
src/js/src/: codec.ts  config.ts  index.ts  logger.ts  runtime.ts  sd.ts  tp.ts  transport.ts
src/js/tests/: test_codec.mjs  test_config.mjs  test_cross_decode.mjs  test_sd.mjs  test_tcp.mjs
src/runtime/: config.rs  mod.rs  threadpool.rs
src/sd/: entries.rs  machine.rs  mod.rs  options.rs  packet.rs  tests.rs
src/transport/: mod.rs  tcp.rs  traits.rs  udp.rs
tests/: cpp_test.cpp  diag_mcast_ns.py  fix_endpoints.py  gen_fixtures.py  gen_golden.py  interop_client.cjs  interop_client.mjs  interop_multi_config.json  mcast_vnet_test.py  multi_interface_config.json  rust_serialization_test.rs  sd_golden_test.cpp  tcp_server_test.cpp  tcp_test_config.json  test_config-original.json  test_config.json  test_config_usecases.py  test_config_validator.py  test_cross_decode.py  test_cross_language.py  test_events.py  test_generate_config.py  test_golden_bytes.py  test_golden_bytes_extended.py  test_interop_full.py  test_multi_interface.py  test_negative.py  test_performance.py  test_pubsub_full.py  test_python_coverage.py  test_python_runtime.py  test_runtime_tp.py  test_sd_binary.rs  test_sd_layout.py  test_sd_production.py  test_serialization.py  test_simple_demo.py  test_someipy_interop.py  test_tcp_fragmentation.py  test_tcp_integration.rs  (+4 more)
tools/: codegenerator.py  generate_config.py
tools/codegen/: main.py  models.py  parser.py  scanner.py
tools/fusion/: README.md  __init__.py  build.py  config_gen.py  config_helper.py  config_manager.py  config_validator.py  coverage.py  dashboard.template.html  debug_network.py  diag_mcast.py  diagrams.py  docs_updater.py  environment.py  execution.py  generate_configs.py  integration.py  main.py  report.py  runner.py  server.py  test.py  toolchains.py  utils.py  verify_tcp_patch.py  verify_utils.py
tools/id_manager/: __main__.py  manager.py
(+27 files in other folders)
