[package]
name = "fusion-hawking"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }

[[example]]
name = "sd_demo"
path = "examples/sd_demos/sd_demo.rs"

[[bin]]
name = "simple_server"
path = "examples/simple_no_sd/rust/server.rs"

[[bin]]
name = "simple_client"
path = "examples/simple_no_sd/rust/client.rs"

[[bin]]
name = "someipy_client"
path = "examples/someipy_demo/client_fusion.rs"

[features]
packet-dump = []

[[bin]]
name = "large_payload_server"
path = "examples/large_payload_test/rust/server.rs"

[[bin]]
name = "large_payload_client"
path = "examples/large_payload_test/rust/client.rs"
