[project]
name = "fusion-hawking-tools"
requires-python = ">=3.8"
version = "0.1.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
norecursedirs = ["logs", "third_party", "build", "target", ".venv", ".venv_linux"]
testpaths = ["tests"]
markers = [
    "needs_netns: test requires Linux network namespaces",
    "needs_multicast: test requires multicast networking support",
    "needs_ipv6: test requires IPv6 connectivity",
    "needs_veth: test requires virtual ethernet pairs",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
